--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "debug": "^4.0.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "mongoose": "^5.2.14",
     "morgan": "~1.9.0"
   },
   "devDependencies": {
