--- a/package.json
+++ b/package.json
@@ -13,8 +13,20 @@
     "debug": "^4.0.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "got": "^9.2.1",
+    "metascraper": "^4.3.2",
+    "metascraper-author": "^4.3.2",
+    "metascraper-clearbit-logo": "^4.3.0",
+    "metascraper-date": "^4.3.2",
+    "metascraper-description": "^4.3.2",
+    "metascraper-image": "^4.3.2",
+    "metascraper-logo": "^4.3.2",
+    "metascraper-publisher": "^4.3.2",
+    "metascraper-title": "^4.3.2",
+    "metascraper-url": "^4.3.2",
     "mongoose": "^5.2.14",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "publisher": "^2.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
